<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/walletTitle"
        layout="@layout/app_title_layout"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputWalletName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:counterMaxLength="12"
        app:layout_constraintTop_toBottomOf="@+id/walletTitle">

        <EditText
            android:id="@+id/walletName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="14sp"
            android:inputType="text"
            android:hint="@string/wallet_name_hint" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputWalletPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:counterMaxLength="18"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/inputWalletName">

        <EditText
            android:id="@+id/walletPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:hint="@string/wallet_pwd_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputConfirmWalletPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:counterMaxLength="18"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/inputWalletPwd">

        <EditText
            android:id="@+id/walletConfirmPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:hint="@string/wallet_confirm_pwd_hint" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputWalletPwdTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmWalletPwd">

        <EditText
            android:id="@+id/walletPwdTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="14sp"
            android:inputType="text"
            android:hint="@string/wallet_pwd_tip_hint" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/createWallet"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/wallet_create"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/selector_gradient_color_primary_30"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputWalletPwdTip" />

</android.support.constraint.ConstraintLayout>