<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@color/colorPrimary"/>

            <ImageView
                android:id="@+id/app_back"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingEnd="9dp"
                android:paddingStart="8dp"
                android:scaleType="center"
                android:src="@mipmap/icon_white_back" />

            <TextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_centerHorizontal="true"
                android:ellipsize="marquee"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/app_btn_right"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_round_write_4"
                android:layout_marginTop="120dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/walletAddress"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="40dp"
                        android:textSize="12sp"
                        android:singleLine="true"
                        android:ellipsize="middle"
                        android:textColor="@color/black"/>

                    <EditText
                        android:id="@+id/walletExportName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:textColor="@color/textColorHint"
                        android:background="@null"
                        android:maxLength="12"
                        android:textSize="12sp"
                        android:maxLines="1"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:background="@color/tab_sep_line"/>

                    <TextView
                        android:id="@+id/walletExportPwdInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="40dp"
                        android:textColor="@color/textColorHint"
                        android:textSize="12sp"
                        android:maxLines="1"/>

                    <View
                        android:id="@+id/walletCopyPwdInfoLine"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:background="@color/tab_sep_line"/>

                    <TextView
                        android:id="@+id/walletExportPrivateKey"
                        style="@style/EditTextStyle"
                        android:layout_marginTop="40dp"
                        android:text="@string/wallet_export_private_key"
                        android:textColor="@color/white"
                        android:background="@drawable/selector_gradient_color_primary_30"
                        />

                    <TextView
                        android:id="@+id/walletExportKeyStore"
                        style="@style/EditTextStyle"
                        android:text="@string/wallet_export_keystore"
                        android:textColor="@color/white"
                        android:background="@drawable/selector_gradient_color_primary_30"
                        />

                    <TextView
                        android:id="@+id/walletDelete"
                        style="@style/EditTextStyle"
                        android:text="@string/wallet_delete"
                        android:textColor="@color/colorAccent"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/selector_gradient_color_primary_30"
                        />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/walletIcon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@mipmap/icon_static_005"
                android:layout_centerHorizontal="true"
                android:layout_gravity="top"
                android:layout_marginTop="90dp"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>